k8s/post-deploy.yml
# Minio key
# Database key
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  labels:
    app: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - name: post
        image: ghcr.io/scalable-teamc/backend/post:latest
        command: ["python","post_app.py"]
      imagePullSecrets:
        - name: myregistrykey
