k8s/auth-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: auth
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8082
