k8s/feed-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: feed
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  selector:
    app: feed
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
